--- a/pages/ejercicio7.html
+++ b/pages/ejercicio7.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ejercicio 7: Layout completo</title>
 	<link rel="stylesheet" href="../styles/style7.css">
 </head>
-
 <body>
 	<header>
 		<div class="cabeza">
@@ -45,22 +43,14 @@
 			<h2>Titulo del articulo del día</h2>
 			<p><strong>El día que aprendí Flexbox, 18/01/2019</strong></p>
 			<img src="https://placehold.co/668x200/png" alt="">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos
-				magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor
-				praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos
-				magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor
-				praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
 				<hr>
 			<h2>Otro post de hace semanas</h2>
 			<p><strong>El día que aprendí Flexbox, 18/01/2019</strong></p>
 			<img src="https://placehold.co/668x200/png" alt="">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos
-				magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor
-				praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos
-				magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor
-				praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sequi ad voluptate sunt tempore quos magnam in! Qui vitae magnam molestias, ipsum soluta laudantium, nobis libero consectetur facilis dolor praesentium, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum porro suscipit laboriosam mollitia.</p>
 				<hr>
 		</section>
 	</main>
@@ -68,5 +58,4 @@
 		<p><strong>Footer</strong></p>
 	</footer>
 </body>
-
 </html>
